login & verify token
