# src/interfaces/LoginResponse.ts
@@ -1,0 +1,18 @@
+
+export interface LoginUser{
+    _id: string;
+    firstName?: string;
+    lastName?: string;
+    email ?: string;
+    phone ?: string;
+    type ?: string;
+    image?:string;
+}
+
+export default interface LoginResponse{
+    user: LoginUser;
+    token: string;
+    message ?: string;
+    status ?: string;
+}
+
