# src/interfaces/MessageResponse.ts
@@ -1,0 +1,4 @@
+export default interface MessageResponse{
+    status ?: string;
+    message ?: string;
+}
